Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 4.7.0
-
Fix Version/s: 4.7.0
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Commits:475a3c275ba173cb130a838b6053cb45d405887e 1e9a92cd6e8670a9dc90fed2044e7de38a3b13e6
Description
In QGestureManager::instance() it accesses the QApplicationPrivate::instance() data structure without making sure it is non-null. I have seen KDE applications crashing when widgets are deleted during application exit:
Thread 1 (Thread 0xb492e930 (LWP 10782)):
[KCrash Handler]
#7 QGestureManager::instance () at /local/git/Qt/qt/src/gui/kernel/qapplication.cpp:5790
#8 0xb68d500a in QWidget::ungrabGesture (this=0x81ee8f8, gesture=Qt::PanGesture) at /local/git/Qt/qt/src/gui/kernel/qwidget.cpp:12050
#9 0xb68d533f in QWidget::~QWidget (this=0x81ee8f8, __in_chrg=<value optimized out>) at /local/git/Qt/qt/src/gui/kernel/qwidget.cpp:1449
#10 0xb68d5572 in QWidget::~QWidget (this=0x81ee8f8, __in_chrg=<value optimized out>) at /local/git/Qt/qt/src/gui/kernel/qwidget.cpp:1580
#11 0xb6336487 in QObjectPrivate::deleteChildren (this=0x84c1500) at /local/git/Qt/qt/src/corelib/kernel/qobject.cpp:1949
#12 0xb68d5289 in QWidget::~QWidget (this=0x8159718, __in_chrg=<value optimized out>) at /local/git/Qt/qt/src/gui/kernel/qwidget.cpp:1560
#13 0xb6cccef1 in QFrame::~QFrame (this=0x8159718, __in_chrg=<value optimized out>) at /local/git/Qt/qt/src/gui/widgets/qframe.cpp:240
#14 0xb6d5cd44 in QAbstractScrollArea::~QAbstractScrollArea (this=0x8159718, __in_chrg=<value optimized out>) at /local/git/Qt/qt/src/gui/widgets/qabstractscrollarea.cpp:521
#15 0xb5ecc181 in Okteta::ColumnsView::~ColumnsView (this=0x8159718, __in_chrg=<value optimized out>) at /local/svn/kde/trunk/KDE/kdeutils/okteta/gui/libcolumnsview/columnsview.cpp:398