Check the gesturemanager pointer before accessing it.

This fixes a crash when a static QWidget is destroyed after the QApplication
object.

Task-number: QTBUG-12025
Reviewed-by: Zeno Albisser
(cherry picked from commit 475a3c275ba173cb130a838b6053cb45d405887e)